# dynoXOR

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
.obsidian/: workspace.json
include/: CLI11.hpp  constants.hpp  functions.hpp
src/: functions.cpp  main.cpp
tests/: test_dynoXOR.cpp
